--- a/details/packaging.html
+++ b/details/packaging.html
@@ -84,8 +84,8 @@
                                         <li><a href="/details/merchandise_marketing.html">Merchandise Marketing</a></li>
                                         <li><a href="/details/corporate_events.html">Corporate Events</a></li>
                                         <li><a href="/details/Government_Ventures.html">Government Ventures</a></li>
-                                        <li><a href="/details/Government_Ventures.html">Gifting</a></li>
-                                        <li><a href="/details/Government_Ventures.html">Packaging</a></li>
+                                        <li><a href="/details/gifting.html">Gifting</a></li>
+                                        <li><a href="/details/packaging.html">Packaging</a></li>
                                     </ul>
                                 </li>
                                 <!-- <li class="menu-item-has-children">
@@ -231,9 +231,9 @@
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
-                        <h1 class="title">Exhibition</h1>
+                        <h1 class="title">Packaging</h1>
                         <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
-                                href="/service.html">Service </a><a class="inner-page" href="/service.html">Exhibition</a></h4>
+                                href="/service.html">Service </a><a class="inner-page" href="/service.html">packaging</a></h4>
                     </div>
                 </div>
             </section>
@@ -310,13 +310,13 @@
 
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/exhibition.html">Project 1</a></h4>
+                                <h4 class="service-text"><a href="/details/packaging.html">Project 1</a></h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
                                     <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
                                     <img src="/assets/img/service/exhibition.jpg" alt="service">
 
-                                    <a href="/details/exhibition.html" class="service-btn">Read Details <i
+                                    <a href="/details/packaging.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
