--- a/details/atl_marketing.html
+++ b/details/atl_marketing.html
@@ -88,8 +88,8 @@
                                         <li><a href="/details/merchandise_marketing.html">Merchandise Marketing</a></li>
                                         <li><a href="/details/corporate_events.html">Corporate Events</a></li>
                                         <li><a href="/details/Government_Ventures.html">Government Ventures</a></li>
-                                        <li><a href="/details/Government_Ventures.html">Gifting</a></li>
-                                        <li><a href="/details/Government_Ventures.html">Packaging</a></li>
+                                        <li><a href="/details/gifting.html">Gifting</a></li>
+                                        <li><a href="/details/packaging.html">Packaging</a></li>
                                     </ul>
                                 </li>
                                 <li class="">
