--- a/project_detials/B2b_marketing/project-details.html
+++ b/project_detials/B2b_marketing/project-details.html
@@ -69,7 +69,7 @@
                                         </ul> -->
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="service.html">Services</a>
+                                    <a href="/service.html">Services</a>
                                     <ul>
                                         <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
                                         
@@ -241,7 +241,7 @@
                     <div class="page-header-content text-center">
                         <h1 class="title">Project Details</h1>
                         <h4 class="sub-title"><a class="home" href="/">Home </a><span></span><a class="inner-page"
-                                href="service.html"> Our Services</a></h4>
+                                href="/service.html">Project</a></h4>
                     </div>
                 </div>
             </section>
@@ -538,7 +538,7 @@
             </section>
             <!-- ./ case-study -->
 
-            <div class="comments-area">
+            <!-- <div class="comments-area">
                 <div class="container">
                     <div class="section-heading">
                         <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Work
@@ -600,7 +600,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
             <!-- ./ comments-area -->
 
             <div class="form-wrap pt-70 ">
