--- a/service-details.html
+++ b/service-details.html
@@ -69,7 +69,7 @@
                                         </ul> -->
                                 </li>
                                 <li class="">
-                                    <a href="service.html">Services</a>
+                                    <a href="/service.html">Services</a>
                                     <ul>
                                         <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
                                         
@@ -231,7 +231,7 @@
                     <div class="page-header-content text-center">
                         <h1 class="title">{service.title}</h1>
                         <h4 class="sub-title"><a class="home" href="index.html">Home </a><a class="home"
-                                href="service.html">Service </a><a class="inner-page" href="service.html"></a></h4>
+                                href="/service.html">Service </a><a class="inner-page" href="/service.html"></a></h4>
                     </div>
                 </div>
             </section>
@@ -436,7 +436,7 @@
                                 <ul class="footer-list">
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="project.html">Our Gallery</a></li>
-                                    <li><a href="service.html">Our Services</a></li>
+                                    <li><a href="/service.html">Our Services</a></li>
                                     <li><a href="team.html">Our Team</a></li>
                                 </ul>
                             </div>
