--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                                         </ul> -->
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="service.html">Services</a>
+                                    <a href="/service.html">Services</a>
                                     <ul>
                                         <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
                                         
@@ -395,7 +395,7 @@
                                 <ul class="footer-list">
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="project.html">Our Projects</a></li>
-                                    <li><a href="service.html">Our Services</a></li>
+                                    <li><a href="/service.html">Our Services</a></li>
                                     <li><a href="team.html">Our Team</a></li>
                                 </ul>
                             </div>
