--- a/details/corporate_events.html
+++ b/details/corporate_events.html
@@ -69,7 +69,7 @@
                                         </ul> -->
                                 </li>
                                 <li class="menu-item-has-children">
-                                    <a href="service.html">Services</a>
+                                    <a href="/service.html">Services</a>
                                     <ul>
                                         <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
                                         
@@ -242,12 +242,48 @@
             <section class="service-section pb-130 pt-130">
                 <div class="container">
                     <div class="section-heading">
-                        <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Explore Our
-                            Expertise</h4>
+                        <h4 class="sub-heading after-none" data-text-animation="fade-in" data-duration="1.5">Explore
+                            Our Expertise</h4>
                         <h2 class="section-title" data-text-animation="fade-in-right" data-split="char"
                             data-duration="0.6" data-stagger="0.04">Marketing solutions designed to amplify your brand.
                         </h2>
                     </div>
+
+                    <section class="filter-section">
+                        <div class="filter-container">
+                            <div class="filter-group">
+                                <div class="filter-dropdown-wrapper">
+                                    <div id="category-selected-text" class="filter-selected-text">
+                                        Category: All
+                                        <i class="fas fa-chevron-down"></i>
+                                    </div>
+                                    <div id="category-dropdown-menu" class="filter-dropdown-menu">
+                                        <ul>
+                                            <li data-filter="all">All</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <button id="category-filter-button" class="filter-button">
+                                    <i class="fas fa-layer-group"></i> </button>
+                            </div>
+
+                            <div class="filter-group">
+                                <div class="filter-dropdown-wrapper">
+                                    <div id="brand-selected-text" class="filter-selected-text">
+                                        Brand: All
+                                        <i class="fas fa-chevron-down"></i>
+                                    </div>
+                                    <div id="brand-dropdown-menu" class="filter-dropdown-menu">
+                                        <ul>
+                                            <li data-filter="all">All</li>
+                                        </ul>
+                                    </div>
+                                </div>
+                                <button id="brand-filter-button" class="filter-button">
+                                    <i class="fas fa-tags"></i> </button>
+                            </div>
+                        </div>
+                    </section>
                     <div class="row gy-5">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
@@ -266,14 +302,14 @@
 
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/Corporate_events/Brewmatica.html">Brewmatica</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
                                     <img src="/assets/img/service/ATLarketing.jpg" alt="service">
 
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/Corporate_events/Brewmatica.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
