--- a/error.html
+++ b/error.html
@@ -68,9 +68,9 @@
                                         </ul>
                                     </li>
                                     <li class="menu-item-has-children">
-                                        <a href="service.html">Services</a>
+                                        <a href="/service.html">Services</a>
                                         <ul>
-                                            <li><a href="service.html">Service</a></li>
+                                            <li><a href="/service.html">Service</a></li>
                                             <li><a href="service-details.html">Service Details</a></li>
                                         </ul>
                                     </li>
@@ -266,7 +266,7 @@
                                 <ul class="footer-list">
                                     <li><a href="about.html">About Us</a></li>
                                     <li><a href="project.html">Our Projects</a></li>
-                                    <li><a href="service.html">Our Services</a></li>
+                                    <li><a href="/service.html">Our Services</a></li>
                                     <li><a href="team.html">Our Team</a></li>
                                 </ul>
                             </div>
