deatils addded -> gov ventures, packaging & merchandise

--- a/details/Government_Ventures.html
+++ b/details/Government_Ventures.html
@@ -260,11 +260,11 @@
                     
                     <div class="row gy-5 service-items-container">
                         <div class="col-lg-3 col-md-6 service-item" data-category="atl" data-brands="brand_a,brand_b">
-                            <h4 class="service-text"><a href="/details/atl_marketing.html">atl Marketing</a></h4>
+                            <h4 class="service-text"><a href="/project_detials/Government_Ventures/Ayodhya_UP_Gov.html">Uttar Pradesh</a></h4>
                             <div class="service-thumb">
                                 <div class="overlay-color"></div>
-                                <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-                                <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
+                                <img src="/assets/img/project_details/Ayodhya/Govt. FK 300x360.png" alt="service">
+                                <a href="/project_detials/Government_Ventures/Ayodhya_UP_Gov.html" class="service-btn">Read Details <i
                                         class="fa-regular fa-arrow-right"></i></a>
                             </div>
                         </div>
