--- a/details/gifting.html
+++ b/details/gifting.html
@@ -292,7 +292,7 @@
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img src="/assets/img/project_details/Ardmore/Ardmore 300x360.png" alt="service">
 
                                     <a href="/project_detials/gifting/ardmore.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
