--- a/details/merchandise_marketing.html
+++ b/details/merchandise_marketing.html
@@ -287,14 +287,14 @@
                     <div class="row gy-5">
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/atl_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/Merchandising/AB_InBev.html">AB inBev</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
 
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img src="/assets/img/project_details/Custom_Beer_glass/CBG 300x360.png" alt="service">
 
-                                    <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/Merchandising/AB_InBev.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
