--- a/details/packaging.html
+++ b/details/packaging.html
@@ -62,7 +62,7 @@
                                             <li><a href="team.html">Team</a></li>
                                             <li><a href="team-details.html">Team Details</a></li>
                                             <li><a href="/project.html">Portfolio</a></li>
-                                            <li><a href="project-details.html">Portfolio Details</a></li>
+                                            <li><a href=/Jin_Beam.html">Portfolio Details</a></li>
                                             <li><a href="pricing.html">Pricing Plans</a></li>
                                             <li><a href="faq.html">Faq</a></li>
                                             <li><a href="error.html">404 Error</a></li>
@@ -71,8 +71,8 @@
                                 <li class="menu-item-has-children">
                                     <a href="/service.html">Services</a>
                                     <ul>
-                                        <li><a href="/details/atl_marketing.html">ATL Marketing</a></li>
-                                        
+                                        <li><a href="/project_detials/packaging/Jin_Beam.html">ATL Marketing</a></li>
+
                                         <li><a href="/details/ttl_marketing.html">TTL Marketing</a></li>
                                         <li><a href="/details/b2b_marketing.html">B2B Marketing</a></li>
                                         <li><a href="/details/pos_marketing.html">POS Marketing</a></li>
@@ -207,10 +207,15 @@
                 </ul>
             </div>
             <ul class="side-menu-social ">
-                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a></li>
-                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a></li>
-                <li class="LinkedIn"><a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a></li>
-                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></i></a></li>
+                <li class="facebook"><a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="instagram"><a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i
+                            class="fab fa-instagram"></i></a></li>
+                <li class="LinkedIn"><a
+                        href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i
+                            class="fa-brands fa-linkedin-in"></i></a></li>
+                <li class="Youtube"><a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i
+                            class="fa-brands fa-youtube"></i></i></a></li>
             </ul>
         </div>
     </div>
@@ -225,15 +230,19 @@
             <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
                 <div class="overlay"></div>
                 <div class="shapes">
-                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
-                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape"></div>
-                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape"></div>
+                    <div class="shape shape-1"><img src="../assets/img/shapes/page-header-shape-1.png" alt="shape">
+                    </div>
+                    <div class="shape shape-2"><img src="../assets/img/shapes/page-header-shape-2.png" alt="shape">
+                    </div>
+                    <div class="shape shape-3"><img src="../assets/img/shapes/page-header-shape-3.png" alt="shape">
+                    </div>
                 </div>
                 <div class="container">
                     <div class="page-header-content text-center">
                         <h1 class="title">Packaging</h1>
                         <h4 class="sub-title"><a class="home" href="/index.html">Home </a><a class="home"
-                                href="/service.html">Service </a><a class="inner-page" href="/service.html">packaging</a></h4>
+                                href="/service.html">Service </a><a class="inner-page"
+                                href="/service.html">packaging</a></h4>
                     </div>
                 </div>
             </section>
@@ -285,45 +294,17 @@
                         </div>
                     </section>
                     <div class="row gy-5">
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/atl_marketing.html">Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/atl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="col-lg-3 col-md-6">
-                            <div class="service-item item-3">
-                                <h4 class="service-text"><a href="/details/ttl_marketing.html"> Project 1</a>
-                                </h4>
-                                <div class="service-thumb">
-                                    <div class="overlay-color"></div>
-
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
-
-                                    <a href="/details/ttl_marketing.html" class="service-btn">Read Details <i
-                                            class="fa-regular fa-arrow-right"></i></a>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item">
-                                <h4 class="service-text"><a href="/details/pos_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/packaging/Jim_Beam.html">Jim Beam</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
                                     <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img src="/assets/img/project_details/Jin _beam/JB 300x360.png" alt="service">
 
-                                    <a href="/details/pos_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/packaging/Jim_Beam.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -331,14 +312,14 @@
 
                         <div class="col-lg-3 col-md-6">
                             <div class="service-item md-pb-30">
-                                <h4 class="service-text"><a href="/details/b2b_marketing.html">Project 1</a>
+                                <h4 class="service-text"><a href="/project_detials/packaging/Oaksmith.html">Oak Smith</a>
                                 </h4>
                                 <div class="service-thumb">
                                     <div class="overlay-color"></div>
                                     <!-- <div class="transparent-shape"><img src="assets/img/shapes/service-shape.png" alt="shape"></div> -->
-                                    <img src="/assets/img/service/ATLarketing.jpg" alt="service">
+                                    <img src="/assets/img/project_details/oakSmith/Oaksmith HF 300x360.png" alt="service">
 
-                                    <a href="/details/b2b_marketing.html" class="service-btn">Read Details <i
+                                    <a href="/project_detials/packaging/Oaksmith.html" class="service-btn">Read Details <i
                                             class="fa-regular fa-arrow-right"></i></a>
                                 </div>
                             </div>
@@ -508,16 +489,22 @@
                             <div class="col-md-6">
                                 <ul class="social-list">
                                     <li class="facebook">
-                                        <a href="https://www.facebook.com/r2mi.india"><i class="fab fa-facebook-f"></i></a>
+                                        <a href="https://www.facebook.com/r2mi.india"><i
+                                                class="fab fa-facebook-f"></i></a>
                                     </li>
                                     <li class="Youtube">
-                                        <a href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i class="fa-brands fa-youtube"></i></a>
+                                        <a
+                                            href="https://youtube.com/@routetomarketmediaindiapvtltd?si=l9rlZw05eNBSIE6U"><i
+                                                class="fa-brands fa-youtube"></i></a>
                                     </li>
                                     <li class="LinkedIn">
-                                        <a href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i class="fa-brands fa-linkedin-in"></i></a>
+                                        <a
+                                            href="https://www.linkedin.com/company/routetomarket-media-india-pvt-limited/"><i
+                                                class="fa-brands fa-linkedin-in"></i></a>
                                     </li>
                                     <li class="instagram">
-                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i class="fab fa-instagram"></i></a>
+                                        <a href="https://www.instagram.com/routetomarketm?igsh=MWhndmNxMmRqeGlsMQ=="><i
+                                                class="fab fa-instagram"></i></a>
                                     </li>
                                 </ul>
                             </div>
