--- a/project_detials/gifting/ardmore.html
+++ b/project_detials/gifting/ardmore.html
@@ -230,8 +230,8 @@
     <div id="smooth-wrapper">
         <div id="smooth-content">
 
-            <section class="page-header" data-background="assets/img/bg-img/page-header-bg.png">
-                <div></div>
+             <section class="page-header" data-background="../assets/img/bg-img/page-header-bg.jpg">
+                <div class="overlay"></div>
                 <div class="shapes">
                     <div class="shape shape-1"><img src="/assets/img/shapes/page-header-shape-1.png" alt="shape"></div>
                     <div class="shape shape-2"><img src="/assets/img/shapes/page-header-shape-2.png" alt="shape"></div>
@@ -253,7 +253,7 @@
                         <div class="col-lg-12">
                             <div class="project-details-content">
                                 <div class="project-details-img">
-                                    <img src="/assets/img/project/project-img-1.jpg" alt="project">
+                                    <img src="/assets/img/project_details/Ardmore/Ardmore 1380x700.png" alt="project">
                                 </div>
                                 <div class="project-details-items">
                                     <div class="project-details-item">
@@ -327,7 +327,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/Ardmore 300x360.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -348,7 +348,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A1 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -410,7 +410,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A2 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -427,7 +427,7 @@
                         <div class="col-lg-5 col-md-12 order-lg-2 order-2">
                             <div class="about-img-box">
                                 <div class="img-11 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A3 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -488,7 +488,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A4 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -509,7 +509,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="../assets/img/mockup.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A5 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
@@ -570,7 +570,7 @@
                                     <img class="shape shape-2" src="/assets/img/shapes/about-shape-2.png" alt="about">
                                 </div>
                                 <div class="img-2 reveal">
-                                    <img src="/assets/img/images/JB_Main_Menu_1.png" alt="about">
+                                    <img src="/assets/img/project_details/Ardmore/A6 519x480.png" alt="about">
                                 </div>
                             </div>
                         </div>
