--- a/service.html
+++ b/service.html
@@ -650,7 +650,7 @@
     <script src="assets/js/slider.js"></script>
     <script src="assets/js/contact.js"></script>
     <script src="assets/js/main.js"></script>
-    <script src="/assets/js/filter.js"></script>
+    <script src="assets/js/filter.js"></script>
 
 </body>
 
